tests/PhiCore/compile_failure/src/core/integer/bool.fail.cpp
#include <phi/core/integer.hpp>

int main()
{
    phi::integer<bool> i{1};
}
